# QutieTutee

app/: CMakeLists.txt  build.gradle  local.properties
app/src/: crud.py
app/src/androidTest/java/com/example/poe/tutorstage1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: LandingActivity.cpp  MainActivity.cpp  Person.cpp  Person.h  SignInActivity.cpp  Student.cpp  Student.h  StudentProfile.cpp  Tutor.cpp  Tutor.h  User.cpp  User.h  native-lib.cpp  student-profile.cpp  student-profile.h  tutor-list.cpp  tutor-list.h  tutor-profile.cpp  tutor-profile.h  tutor-status.cpp  tutor-status.h
app/src/main/java/com/example/poe/tutorstage1/: API.java  APICallbacks.java  APICallbacksGetTutors.java  APIController.java  LandingActivity.java  MainActivity.java  StudentProfileActivity.java  StudentProfileEditActivity.java  TutorListActivity.java  TutorProfileActivity.java  TutorStatusActivity.java  User.java  tutorList.java  tutorListAdapter.java  tutorListItem.java
app/src/main/res/drawable/: button_home.xml  button_home2.xml  button_landing.xml  button_signout.xml  button_status_active.xml  button_status_inactive.xml  card_colour_active.xml
app/src/main/res/layout/: activity_landing.xml  activity_main.xml  activity_student_profile.xml  activity_student_profile_edit.xml  activity_tutor_profile.xml  activity_tutor_search.xml  activity_tutor_status.xml  support_tutor_search.xml  support_tutor_search_popup.xml  tutor_search_page.xml
app/src/main/res/menu/: menu_tutor_list.xml
app/src/main/res/mipmap-anydpi-v26/: QutieTutee_round.xml  ic_launcher.xml  ic_launcher_round.xml  qutie_tutee.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/poe/tutorstage1/: ExampleUnitTest.java
